--- a/lgbm.ipynb
+++ b/lgbm.ipynb
@@ -950,20 +950,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "hdLPTtecQRUV",
-        "outputId": "59d88420-60b3-485a-c049-6872286e49ca"
+        "outputId": "64f5c43e-8985-4706-d0b0-3af4452e6504"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 500 candidates, totalling 2500 fits\n"
+            "Fitting 5 folds for each of 500 candidates, totalling 2500 fits\n",
+            "Best score:  0.584960624457363\n",
+            "Best params:  {'colsample_bytree': 1, 'learning_rate': 0.010485433628498075, 'max_depth': 1, 'n_estimators': 526, 'reg_alpha': 0.5, 'reg_lambda': 0}\n"
           ]
         }
       ],
@@ -991,11 +993,37 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "I8W_C75KQRUW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "I8W_C75KQRUW",
+        "outputId": "b7872402-d760-4fb2-be7e-7703a88ff3b4"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Fitting 5 folds for each of 216 candidates, totalling 1080 fits\n"
+          ]
+        }
+      ],
       "source": [
-        ""
+        "grid = {\n",
+        "    'learning_rate': [0.005, 0.01, 0.015, 0.02],\n",
+        "    'n_estimators': [600, 500, 400],\n",
+        "    'max_depth': [2, 1],\n",
+        "    'reg_alpha': [0.25, 0.5, 0.75],\n",
+        "    'reg_lambda': [0, 0.1, 0.2],\n",
+        "    'colsample_bytree': [1]\n",
+        "}\n",
+        "\n",
+        "clf = GridSearchCV(lgbm, grid, cv=5, scoring='roc_auc',\n",
+        "                   verbose=1)\n",
+        "clf.fit(X_train_enc, y_train)\n",
+        "\n",
+        "print('Best score: ', clf.best_score_)\n",
+        "print('Best params: ', clf.best_params_)"
       ]
     }
   ],
@@ -1026,6 +1054,7 @@
     "colab": {
       "name": "lgbm.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
