--- a/lgbm.ipynb
+++ b/lgbm.ipynb
@@ -997,23 +997,23 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I8W_C75KQRUW",
-        "outputId": "b7872402-d760-4fb2-be7e-7703a88ff3b4"
+        "outputId": "ee0ccb23-0ad9-4827-d236-0e32f67e2cff"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 216 candidates, totalling 1080 fits\n"
+            "Fitting 5 folds for each of 576 candidates, totalling 2880 fits\n"
           ]
         }
       ],
       "source": [
         "grid = {\n",
         "    'learning_rate': [0.005, 0.01, 0.015, 0.02],\n",
-        "    'n_estimators': [600, 500, 400],\n",
-        "    'max_depth': [2, 1],\n",
-        "    'reg_alpha': [0.25, 0.5, 0.75],\n",
+        "    'n_estimators': [600, 500, 400, 300],\n",
+        "    'max_depth': [3, 2, 1],\n",
+        "    'reg_alpha': [0.3, 0.4, 0.5, 0.6],\n",
         "    'reg_lambda': [0, 0.1, 0.2],\n",
         "    'colsample_bytree': [1]\n",
         "}\n",
@@ -1025,6 +1025,17 @@
         "print('Best score: ', clf.best_score_)\n",
         "print('Best params: ', clf.best_params_)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Ot7Nk9vpx6pq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
