--- a/lgbm.ipynb
+++ b/lgbm.ipynb
@@ -991,20 +991,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "I8W_C75KQRUW",
-        "outputId": "ee0ccb23-0ad9-4827-d236-0e32f67e2cff"
+        "outputId": "95b43619-013c-4450-ab94-97a0609114e4"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fitting 5 folds for each of 576 candidates, totalling 2880 fits\n"
+            "Fitting 5 folds for each of 576 candidates, totalling 2880 fits\n",
+            "Best score:  0.585539577801774\n",
+            "Best params:  {'colsample_bytree': 1, 'learning_rate': 0.01, 'max_depth': 2, 'n_estimators': 400, 'reg_alpha': 0.4, 'reg_lambda': 0.1}\n"
           ]
         }
       ],
