--- a/catboost.ipynb
+++ b/catboost.ipynb
@@ -1786,10 +1786,54 @@
     {
       "cell_type": "code",
       "source": [
+        "model2_grid = CatBoostClassifier(cat_features=cat_features_index,\n",
+        "                                eval_metric='AUC:hints=skip_train~false',\n",
+        "                                custom_metric='AUC:hints=skip_train~false', \n",
+        "                                early_stopping_rounds=250,\n",
+        "                                random_state=42,\n",
+        "                                verbose=False)\n",
+        "grid = {\n",
+        "    'iterations': [750],\n",
+        "    'depth': [6],\n",
+        "    'l2_leaf_reg': [6, 7, 8, 9, 10, 15],\n",
+        "    'random_strength': [2, 3, 4],\n",
+        "    'bagging_temperature': [0]\n",
+        "}\n",
+        "\n",
+        "grid2_results = model2_grid.grid_search(grid, X_train, y_train,\n",
+        "                                        cv=5,\n",
+        "                                        verbose=1, plot=False)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9_TUdp7-7JP-",
+        "outputId": "22bcebc2-cd35-4bd5-90b4-5a940c05919c"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Stopped by overfitting detector  (250 iterations wait)\n",
+            "\n",
+            "bestTest = 0.5830900983\n",
+            "bestIteration = 345\n",
+            "\n",
+            "0:\tloss: 0.5830901\tbest: 0.5830901 (0)\ttotal: 24.2s\tremaining: 6m 52s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "9_TUdp7-7JP-"
+        "id": "cdznT2eX75lW"
       },
       "execution_count": null,
       "outputs": []
