--- a/lgbm.ipynb
+++ b/lgbm.ipynb
@@ -17,12 +17,12 @@
       },
       "source": [
         "# Loading libraries and data <br>\n",
-        "Since LightGBM supports missing values, we don't need to fill them ourselves. Also decision trees are fine with not-scaled features and KNN is not needed, so StandardScaler won't be applied"
+        "Since LightGBM supports missing values, we don't need to fill them ourselves. Also decision trees are fine with not-scaled features and KNN is not needed, so StandardScaler() won't be applied"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "Owgc0AgSQRTM"
       },
@@ -52,7 +52,7 @@
         "id": "C4ppM3JwQVyy",
         "outputId": "736056bc-d9fa-4c69-d238-cd1472c1fb5d"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -65,7 +65,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "csUQDmF4QRT5"
       },
@@ -88,7 +88,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -397,7 +397,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -426,7 +426,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -464,7 +464,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -494,7 +494,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -831,7 +831,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -894,7 +894,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -950,7 +950,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -990,8 +990,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "In result of the randomized search, the lowest value of reg_lambda and highest possible value of col_sample_bytree were found to be the optimal ones. The optimal learning_rate is about 0.01 with n_estimators=526, max_depth=1, reg_alpha=0.5. <br>\n",
+        "In the second round we'll test values of parameters that are close to the values, that were found optimal in the first round."
+      ],
+      "metadata": {
+        "id": "7VXQ2ff9LUb_"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1027,6 +1037,22 @@
         "print('Best score: ', clf.best_score_)\n",
         "print('Best params: ', clf.best_params_)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "The optimal values of LightGBM model are the following:\n",
+        "* n_estimators: 400\n",
+        "* learning_rate: 0.01\n",
+        "* max_depth: 2\n",
+        "* reg_alpha: 0.4\n",
+        "* reg_lambda: 0.1\n",
+        "* colsample_bytree: 1 <br>\n",
+        "With values of LightGBM parameters AUC=0.5855396 was achieved."
+      ],
+      "metadata": {
+        "id": "-b5htFCXU4jQ"
+      }
     },
     {
       "cell_type": "code",
@@ -1069,7 +1095,9 @@
       "provenance": [],
       "collapsed_sections": [],
       "include_colab_link": true
-    }
+    },
+    "accelerator": "GPU",
+    "gpuClass": "standard"
   },
   "nbformat": 4,
   "nbformat_minor": 0
