--- a/trees.ipynb
+++ b/trees.ipynb
@@ -34,8 +34,7 @@
         "from sklearn.ensemble import RandomForestClassifier\n",
         "from sklearn.ensemble import AdaBoostClassifier\n",
         "from sklearn.ensemble import ExtraTreesClassifier\n",
-        "from sklearn.model_selection import GridSearchCV\n",
-        "from sklearn.model_selection import RandomizedSearchCV\n",
+        "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV\n",
         "from sklearn.pipeline import Pipeline\n",
         "from sklearn.compose import ColumnTransformer\n",
         "from sklearn.preprocessing import StandardScaler\n",
@@ -526,7 +525,7 @@
       "source": [
         "# Tuning trees parameters values <br>\n",
         "To tune parameters values GridSearchCV will be used. To prevent data leakage, we'll apply data transformation on each training folder separately. In order to do that, we need to read the datasets created as a result of one-hot encoding of the categorical features, but without other preprocessing steps <br>\n",
-        "Since sklearn implementation of decision trees dosn't handle missing values, missing values are filled using KNN. The standarization step is not required by decision trees themselves, but is needed for KNN.  \n",
+        "Since sklearn implementation of decision trees doesn't handle missing values, missing values are filled using KNN. The standarization step is not required by decision trees themselves, but is needed for KNN.  \n",
         "Also features dtype will be changed from float64 to float32 to speed up computations"
       ]
     },
@@ -623,7 +622,7 @@
         "id": "5IFIBtLgjF5M"
       },
       "source": [
-        "In result of the first round of grid search, models with the most regularized models were selected. Therefore, in the next round the regularization will be increased. <br>\n",
+        "In result of the first round of grid search, the most regularized models were selected. Therefore, in the next round regularization degree will be increased. <br>\n",
         "Also the first round has shown, that changing min_impurity_decrease value from the default one doesn't affect models performance. However, in the second round we'll also test 0.001 as a value of min_impurity_decrease"
       ]
     },
@@ -996,7 +995,7 @@
         "id": "pUKMsUE_jF5O"
       },
       "source": [
-        "The optimal values of a decision tree's parameters are max_depth=3, min_samples_leaf=300."
+        "The optimal values of a decision tree's parameters are max_depth=3, min_samples_leaf=300. Using these average AUC=0.576786 is achieved"
       ]
     },
     {
@@ -1047,8 +1046,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        " AUC for both datasets is 0.5, which means that in both cases the tree predicts the negative category for all observations. At the end, the final model will be built on the whole labeled data (which for now has been splitted into a training and testing sets). So on a larger dataset we may get a larger decision tree. Moreover, the parameters values used in the tree_final were selected as the best ones during cross-validation, which means that on average (on different training and testing datasets) the tree_final model has the highest AUC among other decision trees. <br>\n",
-        " To get higher quality of predictions, more complicated models will be used."
+        "AUC for both datasets is 0.5, which means that in both cases the tree predicts the negative category for all observations. At the end, the final model will be built on all available data (which for now has been splitted into a training and testing sets). So on a larger dataset we may get a larger decision tree. Moreover, the parameters values used in the tree_final were selected as the best ones during cross-validation, which means that on average (on different training and testing datasets) the tree_final model has the highest AUC among other decision trees. <br>\n",
+        "To get higher quality of predictions, more complicated models will be built."
       ],
       "metadata": {
         "id": "WOS4HWKgVCYd"
@@ -1094,7 +1093,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "AUC equals 1 on the training set and 0.5 on the test set. In order to achieve better results, GridSearchCV will be used. As before, the pipeline hasa scaling step (needed for KNN), KNN for imputing missing values and a classifier"
+        "AUC equals 1 on the training set and 0.5 on the test set. In order to achieve better results, GridSearchCV will be used."
       ],
       "metadata": {
         "id": "S9yI4K1JXX34"
@@ -1103,7 +1102,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Tuning rf parameters values"
+        "# Tuning rf parameters values <br>\n",
+        "As before, the pipeline has a scaling step (needed for KNN), KNN for imputing missing values, and a classifier"
       ],
       "metadata": {
         "id": "jYhfuAinXyS-"
@@ -1314,8 +1314,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "As a result of the first round of grid search, the minimum values for max_depth and min_samples_split were chosen. Also the highest number of decision trees were used in the best model.<br>\n",
-        "Therefore, at the second round the number of estimators was increased and other values for max_depth were tested."
+        "As a result of the first round of grid search, the lowest values for max_depth and min_samples_split were chosen. Also the highest number of decision trees was used in the best model.<br>\n",
+        "Therefore, at the second round the number of estimators will be increased and other values for max_depth will be tested."
       ],
       "metadata": {
         "id": "375varKDE_YL"
@@ -1415,7 +1415,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The optimal parameters values for the first and the second rounds are the same. In the third round [7, 6, 5, 4] will be tested as values of the max_depth parameter. We'll use random forests consisting of 750, 500 or 400 decision trees."
+        "The optimal parameters values for the first and the second rounds are the same. In the third round the search space will be narrowed down. [7, 6, 5, 4] will be tested as values of the max_depth parameter. We'll use random forests consisting of 750, 500 or 400 decision trees."
       ],
       "metadata": {
         "id": "ubModUmNF1Ku"
@@ -1530,7 +1530,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Based on three round of grid search, we can conclude, that the optimal parameters of a random forest are max_depth=5, n_estimators=500. These values give us average CV AUC of 0.579388"
+        "Based on three round of grid search, we can conclude, that the optimal parameters of a random forest are max_depth=5, n_estimators=500. These values give us average 5-fold cross-validation AUC of 0.579388"
       ],
       "metadata": {
         "id": "uOY5EMpRGhXH"
@@ -1573,6 +1573,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Baseline AdaBoost model crearly overfits the training dataset. To tune hyperparameters of the model, GridSearchCV will be used"
+      ],
+      "metadata": {
+        "id": "Etj8jGEHjlkn"
+      }
     },
     {
       "cell_type": "markdown",
@@ -2468,7 +2477,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Based on the results of the previous rounds we can conclude, that the optimal values for max_depth is 1 or 2, learning_rate should belong to range from 0.01 to 0.1, and the optimal value for n_estimators is below 50. Taking that into account, we'll perform the 4th round of grid search"
+        "Based on the results of previous rounds we can conclude, that the optimal values for max_depth is 1 or 2, learning_rate should belong to the range from 0.01 to 0.1, and the optimal value for n_estimators is below 50. Taking that into account, we'll perform the 4th round of grid search"
       ],
       "metadata": {
         "id": "7285IRG8Xdhd"
@@ -2903,7 +2912,7 @@
         "* learning_rate: 0.05\n",
         "* n_estimators: 40 <br>\n",
         "\n",
-        "5-fold cross-validation average AUC of a model with these parameters values equals 0.5853284951374265"
+        "Average 5-fold cross-validation AUC of the AdaBoost model with these parameters values equals 0.5853284951374265"
       ],
       "metadata": {
         "id": "SH7I7PouJXjx"
@@ -2913,7 +2922,7 @@
       "cell_type": "markdown",
       "source": [
         "# Baseline ExtraTrees model <br>\n",
-        "ExtraTrees models offer more randomness and may show better results in case of overfitting of other models. Overfitting does not occur in our case, but it's still worth trying to find a better model"
+        "ExtraTrees models offer more randomness and may show better results in case of overfitting of other models"
       ],
       "metadata": {
         "id": "tL0LijFsSXpg"
@@ -2950,7 +2959,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Tuning ExtraTrees parameters values"
+        "# Tuning ExtraTrees parameters values <br>\n",
+        "Since ExtraTrees model has many hyperparameters, that don't necessaraly have a high impact on models performance, we'll use RandomizedSearchCV to tune hyperparameters values"
       ],
       "metadata": {
         "id": "4VcFGbp8TJhO"
@@ -3023,7 +3033,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "For all combinations of parameters values an extra-trees model shows AUC=0.5. It means, that for all obervations a model predicts negative category. Such models are not very useful in comparison with models with higher AUC  (e.g. AdaBoost models)"
+        "For all combinations of parameters values the extra-trees model shows AUC=0.5. It means, that for all obervations a model predicts negative category. Such models are not very useful in comparison and with models with higher AUC  (e.g. AdaBoost models)"
       ],
       "metadata": {
         "id": "KSipIzw2g0ue"
