--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -22,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "Gk8nm1JuYzeD"
       },
@@ -50,7 +50,7 @@
         "id": "J9ulyWyQY7Dv",
         "outputId": "83c96bd7-dfe3-4c60-fd1b-a0bd2a21059a"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -63,7 +63,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "_WePKGkdYzeH"
       },
@@ -89,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -428,7 +428,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "id": "QIoOAgmcYzeM"
       },
@@ -448,6 +448,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# check if square brackets, commas and spaces were replaced\n",
         "X_train_dummies.columns"
       ],
       "metadata": {
@@ -457,7 +458,7 @@
         "id": "L02QjxRVZt3S",
         "outputId": "671e63e8-cbc0-4e31-bb55-1608791cc44c"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -499,7 +500,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -528,7 +529,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -566,7 +567,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -612,7 +613,7 @@
       },
       "source": [
         "# Tuning parameters values <br>\n",
-        "Since XGBoost supports missing values, there's no need to use StandardScaler, KNNImputer and pipelines. XGBoost models have many parameters and some of them may not have a strong influence on the quality of the models. Because of that, RandomizedSearchCV will be used at the start of parameters tuning process. Also early stopping will be used with X_test_dummies as the evaluation set"
+        "Since XGBoost supports missing values, there's no need to use StandardScaler, KNNImputer and pipelines. XGBoost models have many parameters and some of them may not have a significant influence on the quality of the model. Because of that, RandomizedSearchCV will be used at the start of parameters tuning process. Also early stopping will be used with X_test_dummies as the evaluation set to speed up computations"
       ]
     },
     {
@@ -626,7 +627,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {
         "id": "Ln4EugChYzeR"
       },
@@ -641,7 +642,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1033,7 +1034,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In result of the first round of grid search, the following parameters values were selected:\n",
+        "In result of the randomized search, the following parameters values were selected:\n",
         "* learning_rate = 0.0253\n",
         "* max_depth = 3\n",
         "* reg_lambda = 1.509\n",
@@ -1042,7 +1043,7 @@
         "* colsample_bytree = 0.9\n",
         "* subsample: 1\n",
         "<br> <br>\n",
-        "In the second round grid search will be used to find the optimal parameters values. Since in the first round the lowest value of max_depth was selected, in second round lower max_depth will be tested. Values of learning_rate and reg_lambda will be set close to the values recieved in the first round."
+        "In the second round grid search will be used to find the optimal parameters values. Since in the first round the lowest value of max_depth was selected, in second round lower max_depth will be tested. Values of learning_rate and reg_lambda will be set to the values, that are close to the values recieved in the first round."
       ],
       "metadata": {
         "id": "7UQjz_FD9wiV"
@@ -1085,7 +1086,7 @@
         },
         "outputId": "5caab921-bf49-495c-e1b8-c4b2a4375441"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1101,8 +1102,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In result of the second round of grid search reg_lambda=1.5, gamma=0.2, max_depth=2, learning_rate=0.01 were selected. <br>\n",
-        "So trees depth should be set to 2 or 1 (max_depth=1 was not tested during first 3 rounds). the optimal value for reg_lambda is 1.5. The optimal value of gamma is between 0.2 and 0.4. Taking that into account the 4th round of grid search will be performed."
+        "In result of the second round of parameters tuning reg_lambda=1.5, gamma=0.2, max_depth=2, learning_rate=0.01 were selected. <br>\n",
+        "So trees depth should be set to 2 or 1 (max_depth=1 was not tested during first 2 rounds). the optimal value for reg_lambda is 1.5. The optimal value of gamma is between 0.2 and 0.4. Taking that into account, the 3rd round of parameters tuning will be performed."
       ],
       "metadata": {
         "id": "pCnnW5IYBTnz"
@@ -1111,7 +1112,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Round 4"
+        "Round 3"
       ],
       "metadata": {
         "id": "wwwJCP1ACO5g"
@@ -1146,7 +1147,7 @@
         "id": "jcbxed3Rs0vA",
         "outputId": "91e0b5a6-c6ca-4646-eedc-9db6784e7b09"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1162,7 +1163,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "The 4th round of grid search shows, that the optimal value for gamma is 0.2. In the 5th round combinations of different number of estimators and learning rates will be tested"
+        "The 3rd round of grid search shows, that the optimal value for gamma is 0.2. In the 4th round combinations of different number of estimators and learning rates will be tested"
       ],
       "metadata": {
         "id": "7KVbx7UuDPQQ"
@@ -1171,7 +1172,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Round 5"
+        "Round 4"
       ],
       "metadata": {
         "id": "xihXpPaDD33K"
@@ -1206,7 +1207,7 @@
         "id": "JKMUrOSDA3xc",
         "outputId": "eab5fb1f-ce84-421c-e800-66136d95847a"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1243,6 +1244,17 @@
       "metadata": {
         "id": "wVut0-stRogc"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "Ze1f1jnpwPUP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
