--- a/lgbm.ipynb
+++ b/lgbm.ipynb
@@ -17,7 +17,7 @@
       },
       "source": [
         "# Loading libraries and data <br>\n",
-        "Since LightGBM supports missing values, we don't need to fill them ourselves. Also decision trees are fine with not-scaled features and KNN is not needed, so StandardScaler() won't be applied"
+        "Decision trees are fine with not-scaled features. Since LightGBM supports missing values, we don't need to fill them ourselves and KNN won't be applied. Therefore, models will be built on not-scaled variables"
       ]
     },
     {
@@ -459,7 +459,7 @@
       },
       "source": [
         "# Encoding categorical features <br>\n",
-        "LightGBM supports categorical features, but they need to be encoded as integers. To achieve that, OrdinalEncoder() will be used"
+        "LightGBM supports categorical features, but they need to be encoded as integers. To achieve that, OrdinalEncoder will be used"
       ]
     },
     {
@@ -826,6 +826,7 @@
         "    X_test_enc.iloc[:, col] = X_test_enc.iloc[:, col].astype('category')\n",
         "\n",
         "\n",
+        "# check if categorical features were encoded as integers\n",
         "X_train_enc.head()"
       ]
     },
@@ -879,6 +880,7 @@
         }
       ],
       "source": [
+        "# check features dtypes\n",
         "X_train_enc.dtypes"
       ]
     },
@@ -936,7 +938,7 @@
       },
       "source": [
         "# Tuning parameters values <br>\n",
-        "LGBM models have many parameters and some of them may not have a strong influence on the quality of the models. Because of that, RandomizedSearchCV will be used at the start of parameters tuning process"
+        "LGBM models have many parameters and some of them may not have a significant influence on the quality of the models. Because of that, RandomizedSearchCV will be used at the start of parameters tuning process"
       ]
     },
     {
@@ -993,7 +995,7 @@
       "cell_type": "markdown",
       "source": [
         "In result of the randomized search, the lowest value of reg_lambda and highest possible value of col_sample_bytree were found to be the optimal ones. The optimal learning_rate is about 0.01 with n_estimators=526, max_depth=1, reg_alpha=0.5. <br>\n",
-        "In the second round we'll test values of parameters that are close to the values, that were found optimal in the first round."
+        "In the second round we'll test values of parameters that are close to the values, that were found to be optimal in the first round."
       ],
       "metadata": {
         "id": "7VXQ2ff9LUb_"
@@ -1048,7 +1050,7 @@
         "* reg_alpha: 0.4\n",
         "* reg_lambda: 0.1\n",
         "* colsample_bytree: 1 <br>\n",
-        "With values of LightGBM parameters AUC=0.5855396 was achieved."
+        "With these values of LightGBM parameters AUC=0.5855396 was achieved."
       ],
       "metadata": {
         "id": "-b5htFCXU4jQ"
