--- a/lgbm.ipynb
+++ b/lgbm.ipynb
@@ -1002,6 +1002,15 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Round 2"
+      ],
+      "metadata": {
+        "id": "duyVn16n_NCv"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -1055,17 +1064,6 @@
       "metadata": {
         "id": "-b5htFCXU4jQ"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        ""
-      ],
-      "metadata": {
-        "id": "Ot7Nk9vpx6pq"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ],
   "metadata": {
