--- a/catboost.ipynb
+++ b/catboost.ipynb
@@ -759,8 +759,8 @@
         "    'iterations': randint(50, 1000),\n",
         "    'depth': [1, 4, 6, 8, 10],\n",
         "    'l2_leaf_reg': [0, 5, 10, 15],\n",
-        "    'random_strength': [0, 3, 7, 10],\n",
-        "    'bagging_temperature': [0, 1, 3, 5]\n",
+        "    'random_strength': [0, 3, 7],\n",
+        "    'bagging_temperature': [0, 1, 3]\n",
         "}\n",
         "\n",
         "clf = RandomizedSearchCV(model, distr, scoring='roc_auc',\n",
